Some corrections in the boston_housing project

--- a/projects/boston_housing/boston_housing.ipynb
+++ b/projects/boston_housing/boston_housing.ipynb
@@ -985,7 +985,8 @@
     "**Client 2:** <br>\n",
     "According to the graph **RM vs MEDV in Data Exploration Section**, prices of houses with **4 rooms** are between approximately **100K to 300K (Median is 200K).** Houses with **LSTAT around 32** have prices varying **from 50K to 380K approximately (Median is 215k), according to the graph LSTAT vs MEDV**. Finally, neighbourhoods with **PTRATIO around 22-to-1** have houses varying from **400K to 450K (Median is 425k)** Then, the **mean value is 280K, that would be my suggeston.**<br>\n",
     "**Client 3:** <br>\n",
-    "According to the graph **RM vs MEDV in Data Exploration Section**, prices of houses with **8 rooms** are between approximately **790K to 1KK (Median is 895K).** Houses with **LSTAT around 3** have prices varying **from 700K to 1KK approximately (Median is 850k), according to the graph LSTAT vs MEDV**. Finally, neighbourhoods with **PTRATIO around 12-to-1** have houses varying from **500K to 1KK (Median is 750k)** Then, the **mean value is around 832K, that would be my suggeston.**<br>"
+    "According to the graph **RM vs MEDV in Data Exploration Section**, prices of houses with **8 rooms** are between approximately **790K to 1KK (Median is 895K).** Houses with **LSTAT around 3** have prices varying **from 700K to 1KK approximately (Median is 850k), according to the graph LSTAT vs MEDV**. Finally, neighbourhoods with **PTRATIO around 12-to-1** have houses varying from **500K to 1KK (Median is 750k)** Then, the **mean value is around 832K, that would be my suggeston.**<br>\n",
+    "I think the prices are reasonable, because they are not too far from what the model predicted, even the calculation method being very simple."
    ]
   },
   {
@@ -1045,7 +1046,8 @@
     "From the date that data was collected to the present, lots of things probably has changed at the neighbourhoods in dataset. Things like infrastructure, buildings, markets in surrounding area has improved, making this data outdated.<br>\n",
     "Other point is the amount of features present in the dataset: Only 3 features are not enough to describe a house. In my point of view, features like area and age of the building have some relevance when describing a home for real state purposes. <br>\n",
     "Besides what was stated before, the amount of data used for both training and test is too small, which directly affects the robustness of the model. <br>\n",
-    "Finally, data colected in urban environments would not be applicable in rural environments because I think that different features are more correlated with the price for these two environments. For instance, the Student-Teacher ratio should be more correlated to the price of the house at an urban environment than at a rural environment."
+    "Finally, data colected in urban environments would not be applicable in rural environments because I think that different features are more correlated with the price for these two environments. For instance, the Student-Teacher ratio should be more correlated to the price of the house at an urban environment than at a rural environment.<br>\n",
+    "**Hence, due all the facts that were exposed above, this model should not be used in a real-world scenario**"
    ]
   },
   {
