Added the suggestions of the revisors

--- a/projects/student_intervention/student_intervention.ipynb
+++ b/projects/student_intervention/student_intervention.ipynb
@@ -91,7 +91,7 @@
      "output_type": "stream",
      "text": [
       "Total number of students: 395\n",
-      "Number of features: 31\n",
+      "Number of features: 30\n",
       "Number of students who passed: 265\n",
       "Number of students who failed: 130\n",
       "Graduation rate of the class: 67.09%\n"
@@ -103,7 +103,7 @@
     "n_students = len(student_data)\n",
     "\n",
     "# TODO: Calculate number of features\n",
-    "n_features = len(student_data.columns)\n",
+    "n_features = len(student_data.columns[:-1])\n",
     "\n",
     "# TODO: Calculate passing students\n",
     "n_passed = len(student_data[student_data['passed']=='yes'])\n",
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -496,7 +496,7 @@
     "clf_A = linear_model.SGDClassifier(random_state=0,shuffle=True)\n",
     "clf_B = KNeighborsClassifier()\n",
     "clf_C = SVC(random_state=0,kernel='sigmoid')\n",
-    "classifierList = [clf_A,clf_B,clf_C]\n",
+    "\n",
     "# TODO: Set up the training set sizes\n",
     "X_train_100 = 100\n",
     "y_train_100 = 100\n",
@@ -507,11 +507,11 @@
     "X_train_300 = 300\n",
     "y_train_300 = 300\n",
     "\n",
-    "trainingSetList = [[X_train_100,y_train_100],[X_train_200,y_train_200],[X_train_300,y_train_300]]\n",
+    "\n",
     "# TODO: Execute the 'train_predict' function for each classifier and each training set size\n",
-    "for clf in classifierList:\n",
-    "    for train_set in trainingSetList:\n",
-    "        train_predict(clf, X_train[:train_set[0]], y_train[:train_set[1]], X_test, y_test)"
+    "for clf in [clf_A,clf_B,clf_C]:\n",
+    "    for size in [100,200,300]:\n",
+    "        train_predict(clf, X_train[:size], y_train[:size], X_test, y_test)"
    ]
   },
   {
@@ -587,13 +587,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** Gradient Descent is an optimization method that tries to approximate a function f that models the data the best is possible. The function has the variables, that essentially are the features of each examples, and the coefficients, that are numbers which multiplies each variable. The task of Gradient Descent is to find the coeficients for a function that best fit on data, using the data itself for this pourpose. This phase we say we train the model. <br>\n",
-    "For this task, Gradient Descent minimizes the difference between output of the function f (estimated value) and the actual answer observed on data (real value). This difference is called error. Thus, the algorithm tries to minimize the error between the predictions and the data. <br>\n",
-    "<p>The function f Gradient Descent works with must have some special features. <br>\n",
-    "Firstly, it must be differentiable. It means that with help of Calculus is possible to find another function f' derivated from f, which give us some information about the behaviour of f. Amongst other information, function f', also known as derivative, tells us in what point the function f has its lowest value. For functions with more the one variable, which is the case of most machine learning problems, for each variable we can find the derivative (partial derivative), since the function is differentiable. The set of all derivatives (one for each variable) is called gradient. The gradient gives one information really important for the training process: when the error is increasing or decreasing. <br>\n",
-    "A second feature is, in order to guarantee that the algorithm will find an answer, and this answer is the best answer (converge), the function f must have just one point p where its value is minimum (global minima). By minimum value we mean that, adjacent points of p have a value greater than the value of p. If function f has more than one point of minimum (local minima), the method does not guarantee to give the best answer. <br>\n",
-    "<p>In order to minimize the error, Gradient Descent performs a number of iterations. In each itearation, it evaluates the value of the gradient. If the value has decreased, all coefficients are updated with this new value. Otherwise, the values are not updated. When the value of gradient decreases, it indicates that error is decreasing as well. The training stops whether the number of interarion is reached or the value of gradient stops decreasing. <br>\n",
-    "<p> After training, the coefficients are known and are used to predict values for new examples. Each coefficient is multiply by one feature, and the final value is the estimated value."
+    "**Answer: ** <br>\n",
+    "<p>Imagine you are on top of a mountain in a valley. The air is thin and the temperature is low. So you have to go down as fast as possible. <br>\n",
+    "<p>However, there are 2 problems: <br>\n",
+    "1. Due to the fog, you can only see one meter around you<br>\n",
+    "2. You do not know what the relief of the mountain is like. <br>\n",
+    "\n",
+    "<p>In that case, how will you get off the mountain? <br>\n",
+    "The option would be, look around you and see which is the biggest slope and then take a step in that direction. And do this until you reach the lowest part of the mountain.\n",
+    "In that case, the goal is to minimize the height you are in each time period. <br>\n",
+    "<p> Gradient Descent does, intuitively the same process, but the goal is minimize the error between the predicted value and the actual value.\n"
    ]
   },
   {
@@ -614,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -633,6 +636,7 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "from sklearn.metrics import make_scorer\n",
     "from sklearn.metrics import f1_score\n",
+    "from sklearn import linear_model\n",
     "\n",
     "# TODO: Create the parameters list you wish to tune\n",
     "parameters = {'loss':['hinge','log','modified_huber','squared_hinge','perceptron'],\n",
@@ -641,7 +645,6 @@
     "               'shuffle': [True,False]\n",
     "               }\n",
     "              \n",
-    "\n",
     "\n",
     "# TODO: Initialize the classifier\n",
     "clf = linear_model.SGDClassifier(random_state=0)\n",
@@ -678,7 +681,7 @@
     "**Answer: ** <br>\n",
     "F1 Score for training: 0.8040 <br>\n",
     "F1 Score for testing: 0.8250 <br>\n",
-    "Training and testing scores are slightly above the means (0.7879 and 0.8241 respectively)"
+    "Training and testing scores are slightly above the means (0.8040 and 0.8250 respectively)"
    ]
   },
   {
