--- a/projects/smartcab/smartcab.ipynb
+++ b/projects/smartcab/smartcab.ipynb
@@ -48,7 +48,10 @@
     "import visuals as vs\n",
     "\n",
     "# Pretty display for notebooks\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "#Latex Sintax\n",
+    "from IPython.display import Math"
    ]
   },
   {
@@ -448,7 +451,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:** <br>\n",
+    "The decaying used function was the **Negative Gompertz Function** (https://math.stackexchange.com/questions/1328566/slow-decreasing-function-that-exhibits-asymptotic-behaviour). <br>\n",
+    "For this experiment, I used 2 versions of this function:\n",
+    "$$ \\textrm{(1}) \\hspace{50px}  \\epsilon = 1 - 0.5001e^{-1000e^{-0.005t}} \\hspace{10px} \\textrm {for } \\hspace{10px} \\epsilon > 0.5 $$\n",
+    "$$ \\textrm{(2}) \\hspace{50px}  \\epsilon = 0.5 - 0.4999e^{-1000e^{-0.0015t}} \\hspace{10px} \\textrm {for } \\hspace{10px} \\epsilon \\leqslant 0.5 $$ <br>\n",
+    "The first equation starts from 1, where it is stationary for some time and then starts decaying to 0.5 where it becomes stationary again, once its asymptote is 0.4999. <br>\n",
+    "The second equation starts from 0.5, where it is stationary for some time and the starts decaying to 0.0002 where it becomes stationary again, once its asymptote is 0.0001. <br>\n",
+    "I chose these 2 functions because I would like to give the agent enough time to explore the enviroment, once my state space has 512 states. Then, the first function gives enough time to the agent take as much random actions as possible, then it decay to 0.5 slowly, giving the agent time to reinforce what was learned and also explore the enviroment. Finally, the second function starts from 0.5 and decay to 0.002, when the agent reinforces what was learned in the previous moments.<br>\n",
+    "Before testing, the agent performed 8000 training trials, approximately. <br>\n",
+    "I chose the epsilon-tolerance as 0.0005 because of the asymptote of my function. The learning rate is 0.999, due its good performance in previous tests. <br>\n",
+    "The improvement using Q-learning algoritm was impressive, getting A+ rating for safety and A for reliability, whereas the default agent got F in this two features. It shows the agent succefully learned an appropriate policy and make me satisfied with this result.\n"
    ]
   },
   {
@@ -472,7 +485,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** "
+    "**Answer:** <br>\n",
+    "Considering the states containing: <br>\n",
+    " - waypoint\n",
+    " - light\n",
+    " - left,right,oncoming traffic (in this order)\n",
+    "an optimal policy should consider the follow rules:\n",
+    "- Take no action if the light is red\n",
+    "- In case of green light andif there is no traffic in the waypoint direction, follow this direction\n",
+    "    \n",
+    "Some states from the file: <br>\n",
+    "('left', 'red', None, None, None) <br>\n",
+    " -- forward : -7389.38 <br>\n",
+    " -- right : 518.01 <br>\n",
+    " **-- None : 7247.28** <br>\n",
+    " -- left : -6895.29 <br>\n",
+    " \n",
+    "('right', 'red', None, None, None) <br>\n",
+    " -- forward : -5401.89 <br>\n",
+    " -- right : 998.44 <br>\n",
+    " **-- None : 5320.02** <br>\n",
+    " -- left : -5719.15 <br>\n",
+    " \n",
+    "('forward', 'red', None, None, None) <br>\n",
+    " -- forward : -6676.55 <br>\n",
+    " -- right : 567.34 <br>\n",
+    " **-- None : 11423.86** <br>\n",
+    " -- left : -7029.43 <br>\n",
+    " \n",
+    "('left', 'red', 'forward', 'forward', 'left') <br>\n",
+    " -- forward : -160.04 <br>\n",
+    " -- right : -180.64 <br>\n",
+    " **-- None : 107.66** <br>\n",
+    " -- left : -521.20 <br>\n",
+    " \n",
+    " ('left', 'green', None, None, None) <br>\n",
+    " -- forward : 424.18 <br>\n",
+    " -- right : 432.35 <br>\n",
+    " -- None : -3018.14 <br>\n",
+    " **-- left : 5336.44** <br>\n",
+    " \n",
+    " ('forward', 'green', None, None, None) <br>\n",
+    " **-- forward : 8487.04** <br>\n",
+    " -- right : 442.20 <br>\n",
+    " -- None : -3043.47 <br>\n",
+    " -- left : 406.01 <br>\n",
+    " \n",
+    " ('right', 'green', None, None, None) <br>\n",
+    " -- forward : 336.56 <br>\n",
+    " **-- right : 3936.06** <br>\n",
+    " -- None : -2505.38 <br>\n",
+    " -- left : 341.24 <br>\n",
+    " \n",
+    " For the rules stated above, the policy is optimal. <br>\n",
+    " \n",
+    "PS: I notice that there is a 'right-turn-rule' in US, that even when the light is red, one is allowed to turn right. However, when training this agent, I did not know and consider that is not allowed, since in my coutry (Brazil) it is not allowed."
    ]
   },
   {
