- Problem statement finished

--- a/projects/capstone/CapstoneProject/Report/Capstone Report.ipynb
+++ b/projects/capstone/CapstoneProject/Report/Capstone Report.ipynb
@@ -17,7 +17,7 @@
     "## I. Definition\n",
     "\n",
     "### Project Overview\n",
-    "The main objective for this project is to be capable to predict the **price of a given set stock** in a future time interval. In order to achieve the goal, Machine Learning techniques will be applied on the historical **adjusted closing prices** for a set of **companies stocks** listed in the **B3 exchange** in 2017. \n",
+    "The main objective for this project is to be capable to predict the **price of a given set stock** in a future time interval in days. In order to achieve the goal, Machine Learning techniques will be applied on the historical **adjusted closing prices** for a set of **companies stocks** listed in the **B3 exchange** in 2017. \n",
     "\n",
     "#### What is a stock?\n",
     "\n",
@@ -66,13 +66,41 @@
     "### Problem Statement\n",
     "Given historical adjusted closing prices data for different stocks, is it possible to predict those stock prices for the future?\n",
     "In order to implement this task, two data sets will be needed: <br>\n",
-    "1. A list of all companies currently listed in B3\n",
-    "2. Daily adjusted closing prices for all the companies listed since 1st Ja\n",
+    "1. A list of all companies currently listed in B3 exchange\n",
+    "2. Daily adjusted closing prices (in Brazilian Reais - BRL) for all the companies listed since 1st January 2000\n",
     "\n",
-    "The expected output is a price estimate for the companies and time interval queried, with and error of +/-5%. <br>\n",
+    "Thus the expected input for the **training algorithm** is: <br>\n",
+    "- A list of trade dates with its respectly adjusted closing price\n",
+    "- A set of technical indicators calculated based on the input list described above.\n",
+    "\n",
+    "**After trained, the expected input** for estimating prices are a list of **stock tickets, such as PTR4 and the future date in format yyyy-mm-dd which the estimative is requested**. <br>\n",
+    "**The expected output is a price estimate for the companies in time interval queried, with and error of +/-5%.** <br>\n",
     "\n",
     "#### Problem Domain\n",
-    "\n"
+    "Since the problem consists in **estimate the value** of future prices, which are **continuous quantitative data**, **a regressor is the right tool** to try to achieve this goal.\n",
+    "\n",
+    "Althougth there are some challenges to tackle:\n",
+    "- Missing price values for different stocks and as well as in different dates\n",
+    "- Training cost, since there will be a fairly amount of historical data (almost 18 years)\n",
+    "- Response time: The algorithm should return an answer in a feasibile time\n",
+    "- Feature Engineering: Which features should be used?\n",
+    "- The estimative itself: Since the market is a very uncertain environment, how to fit a regressor in order to estimate stock prices?\n",
+    "\n",
+    "#### Task List\n",
+    "In order to successfully estimate the prices, the following tasks are required:\n",
+    "- Download the all listed companies from B3 exchange website\n",
+    "- Select only the ordinary (ON) and preferred (PN) shares amongst all other shares (options, funds etc).\n",
+    "- Download the historical data for thoses shares from Yahoo Finance\n",
+    "- Analyze the prices in order to identify patterns, outliers and missing values\n",
+    "- Clean Data, which includes some strategy to fill missing values\n",
+    "- Plot prices and statistics (average, distribution, etc) about data.\n",
+    "- Calculate different technical indicators on data over the time and plot it.\n",
+    "- Calculate correlations between prices and technical indicators\n",
+    "- Choose a set of indicators to be features of the problem\n",
+    "- Choose a regressor algorithm\n",
+    "- Perform a model tuning in order to have the best model amongst different initial setups\n",
+    "\n",
+    "### Metrics\n"
    ]
   },
   {
