- Metrics Session Finished

--- a/projects/capstone/CapstoneProject/Report/Capstone Report.ipynb
+++ b/projects/capstone/CapstoneProject/Report/Capstone Report.ipynb
@@ -73,7 +73,7 @@
     "- A list of trade dates with its respectly adjusted closing price\n",
     "- A set of technical indicators calculated based on the input list described above.\n",
     "\n",
-    "**After trained, the expected input** for estimating prices are a list of **stock tickets, such as PTR4 and the future date in format yyyy-mm-dd which the estimative is requested**. <br>\n",
+    "**After trained, the expected input** for estimating prices are a list of **stock tickets, such as PTR4 and the future date in format yyyy-mm-dd in which the estimative is requested**. <br>\n",
     "**The expected output is a price estimate for the companies in time interval queried, with and error of +/-5%.** <br>\n",
     "\n",
     "#### Problem Domain\n",
@@ -100,7 +100,10 @@
     "- Choose a regressor algorithm\n",
     "- Perform a model tuning in order to have the best model amongst different initial setups\n",
     "\n",
-    "### Metrics\n"
+    "### Metrics\n",
+    "Since the proposed solution for this problem is a regression, the model metric chosen is the **coefficient of determination, also known as $R^2$ Score**. <br>\n",
+    "The coefficient of determination is widely used to evaulate the goodness of fit of a model. It explains how well the predictions os a model approximates to the real data. <br>\n",
+    "$R^2$ Score is scaled from 0 to 1, which 1 indicating a perfect fit of the model to data.\n"
    ]
   },
   {
@@ -115,7 +118,8 @@
     "[3]: https://en.wikipedia.org/wiki/B3_(stock_exchange) (Accessed in 2017-11-22) <br>\n",
     "[4]: https://www.investopedia.com/terms/e/exchange.asp (Accessed in 2017-11-26)<br>\n",
     "[5]: https://www.investopedia.com/ask/answers/133.asp?ad=dirN&qo=investopediaSiteSearch&qsrc=0&o=40186 (Accessed in 2017-11-26)<br>\n",
-    "[6]: https://www.investopedia.com/terms/a/adjusted_closing_price.asp (Accessed in 2017-11-26) <br>"
+    "[6]: https://www.investopedia.com/terms/a/adjusted_closing_price.asp (Accessed in 2017-11-26) <br>\n",
+    "[7]: https://en.wikipedia.org/wiki/Coefficient_of_determination (Accessed in 2017-11-26) <br>"
    ]
   },
   {
